# paisleycmd

./: .gitignore  .gitmodules  Makefile  Makefile.am  README.md  TODO  configure.ac  paisleycmd.spec.in
doc/: Makefile.am
etc/bash_completion.d/: Makefile.am
examples/: apply-removename.py  delete-dad.py  delete-non-mushin-hoodie.py  delete-non-mushin.py  mushin-hoodie-fix-doc.py  mushin-hoodie-intify-iu.py  mushin-hoodie.py  removename.py
misc/: Makefile.am  pycheckerrc
paisleycmd/: Makefile.am
paisleycmd/command/: Makefile.am  database.py  document.py  main.py  replicate.py  security.py  task.py  user.py  view.py  viewserver.py
paisleycmd/common/: Makefile.am  common.py  log.py  logcommand.py
paisleycmd/configure/: Makefile.am  configure.py  installed.py.in  uninstalled.py.in
